--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,7 +4,9 @@
     "index": "./src/index.js"
   },
   "dependencies": {
+    "antd": "^2.5.2",
     "dva": "^1.1.0",
+    "qs": "^6.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
